# multi_threaded_prime_numbers

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
.hooks/: README.md  pre-commit
app/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  in.xml  main.cpp
redlib/: CMakeLists.txt
redlib/include/: Interval.h  Numbers.h  PrimeNumberGenerator.h  PrimeNumberGeneratorConstants.h  PrimeNumberGeneratorTypes.h  Socket.h  SocketTypes.h  Types.h  Utils.h  Xml.h
redlib/src/: Interval.cpp  Numbers.cpp  PrimeNumberGenerator.cpp  Socket.cpp  Utils.cpp  Xml.cpp
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/: CMakeLists.txt  PrimeNumberGenerator.cpp  PrimeNumberGenerator.h  Utils.h  Xml.cpp  Xml.h  main.cpp
test/: CMakeLists.txt  PrimeNumberGeneratorTest.cpp  UtilsTest.cpp
test/client/: CMakeLists.txt  ClientTest.cpp
test/integration/: README.md  client.py  server.py
test/redlib/: CMakeLists.txt  NumbersTest.cpp  PrimeNumberGeneratorTest.cpp  UtilsTest.cpp
